plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.mogak'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '25'
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Annotation processing
	compileOnly 'org.projectlombok:lombok:1.18.44'
	annotationProcessor 'org.projectlombok:lombok:1.18.44'
	testCompileOnly 'org.projectlombok:lombok:1.18.44'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.44'

	// Dependency management
	implementation platform("software.amazon.awssdk:bom:2.27.21")
	implementation platform("org.springframework.cloud:spring-cloud-dependencies:2025.1.0")

	// Web and API
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-jackson'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// Security and auth
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client'
	implementation 'org.springframework.security:spring-security-oauth2-jose'
	implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

	// Persistence
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// Storage and media
	implementation "software.amazon.awssdk:s3"
	implementation 'com.github.downgoon:marvin:1.5.5'
	implementation('com.github.downgoon:MarvinPlugins:1.5.5') {
		exclude group: 'org.bytedeco', module: 'javacv-platform'
	}

	// Test support used by production code
	implementation 'org.springframework:spring-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-jackson-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.awaitility:awaitility'

	// Runtime drivers
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.postgresql:postgresql'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
	options.release = 25
}
